test/classes/casts/coerceInitAssign/error/from-shared-A-nilable-to-shared-A.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
proc foo() {
  // coercing from shared A? to shared A
  var alloc = new shared A();
  var a:shared A? = alloc;
  var a_:shared A = a;
}
proc main() {
  foo();
}
